--- a/Responsive Web Design Projects/Tom Zé Tribute Page/style.css
+++ b/Responsive Web Design Projects/Tom Zé Tribute Page/style.css
@@ -13,18 +13,24 @@ h2 {
 }
 
 #main {
-    background-color: rgb(224, 213, 197);
+    background-color: #c0b5b5;
     position: relative;
-    width:fit-content;
-    height: fit-content; 
+    width: 100vmax;
+    height: 100vmax; 
     border-radius: 5px;
     
 }
 
 #img-div {
-    background-color: white;
+    background-color: #b1a9a9;
     margin: auto;
     border-radius: 3px;
-    width: 650px;
-    height: 500px;
+    width: 900px;
+    height: 700px;
+}
+
+#image {
+   position: relative;
+   margin: 80px auto 0px;
+
 }
