--- a/Responsive Web Design Projects/Tom Zé Tribute Page/style.css
+++ b/Responsive Web Design Projects/Tom Zé Tribute Page/style.css
@@ -2,7 +2,7 @@ html {
     font-size: 12px;
 }
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto Mono', monospace, sans-serif;
     background-color: rgb(237, 242, 243);
     text-align: center;
     justify-content: center;
@@ -101,4 +101,14 @@ blockquote {
     max-width: 580px;
     margin: 0 auto 50px auto;
     text-align: center;
+}
+
+#tom-ze {
+    text-align:end;
+    font-family: 'Yomogi', Roboto, sans-serif;
+}
+
+#quote {
+    text-align:center;
+    font-family: 'Yomogi';
 }
