--- a/Responsive Web Design Projects/#2-Bojack Horseman Form File/style.css
+++ b/Responsive Web Design Projects/#2-Bojack Horseman Form File/style.css
@@ -1,8 +1,8 @@
 body {
     font-size: 15px;
     font-family: 'Uchen', serif;
-    color: whitesmoke;
-    background-image: url(Bojack_Horseman\ \(2\).png);
+    color:powderblue;
+    background-image: url(https://64.media.tumblr.com/b2b00ccde967a4a227fa0cfaeffacab0/3ddbf9a192a4953e-44/s1280x1920/e0e0dc57481808d54515734f76da9fb9578eeb96.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
@@ -15,15 +15,25 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding-top: 5px;
-    margin:auto 400px auto 400px;
-    text-align:start;
+    padding-top: 15px;
+    margin:auto 350px auto 350px;
+    text-align:start;   
 }
-
-#dropdown-1 {
-    /*max-width here used provisorely*/
-    max-width: 900px;
-    align-self:flex-start;
+@media (max-width: 900px) {
+  #survey-form {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5px;
+    margin: auto auto auto 30px;
+  }
+}
+@media (min-width: 901px) and (max-width: 1100px) {
+  #survey-form {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5px;
+    margin: auto auto auto 150px;
+  }
 }
 
 #title {
@@ -41,4 +51,20 @@ body {
 
 .form-control {
     border-radius: 4px;
+    width: 400px;
+    height: 28px;
 }
+
+#comments {
+  height: 100px;
+
+}
+
+#submit {
+  width: 80px;
+  height: 30px;
+  position: relative;
+}
+
+
+
