--- a/Responsive Web Design Projects/#3-Product Landing Page/style.css
+++ b/Responsive Web Design Projects/#3-Product Landing Page/style.css
@@ -1,5 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:400,700';
 
+/* Global element styling */
 * {
     margin: 0;
     padding: 0;
@@ -11,32 +12,146 @@ body {
     font-family: Lato, sans-serif;
 }
 
-.logo {
-    width: 60vw;
-    height: auto;
+#page-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+a {
+    color: #000;
+    text-decoration: none;
 }
 
-#nav-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.nav-link {
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+li {
+    list-style: none;
 }
 
 h2 {
-    text-align: center;
     margin: auto;
-    padding-top: 50px;
+    text-align: center;
 }
 
-form {
+header {
+    position:fixed;
+    top: 0;
+    display: flex;
+    background-color: rgb(223, 186, 94);
+    width: 100vw;
+}
+
+#info {
     display: flex;
     flex-direction: column;
-    margin: auto 100px auto 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+    margin-top: 100px;
+}
+
+#features {
+    margin-top: 30px;
+}
+
+#features .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 125px;
+    width: 20vw;
+    color: rgb(145, 112, 72);
+  }
+  
+  @media (max-width: 550px) {
+    #features .icon {
+      display: none;
+    }
+  }
+
+#features .desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 125px;
+    width: 80vw;
+    padding: 50px;
+  }
+  
+  @media (max-width: 550px) {
+    #features .desc {
+      width: 100%;
+      padding: 0;
+      height: 150px;
+    }
+  }
+  
+  @media (max-width: 650px) {
+    #features {
+      margin-top: 0;
+    }
+  }
+
+/* General classes */
+
+.logo {
+    position: relative;
+    text-align: center;
+    margin: 10px 150px auto 10px;
+}
+
+nav > ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+/* IDs */
+
+#email {
+    position: relative;
+    width: 300px;
+    height: 25px;
+    margin-bottom: 7px;
+}
+
+#submit {
+    width: 90px;
+    height: 21px;
+    background-color: rgb(223, 186, 94);
+}
+
+.company-values {
+    display: flex;
+    margin: auto;
+    align-items: center;
+}
+
+#how-it-works {
+    align-self: center;
+}
+
+#pricing {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 50px 200px;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin: 10px;
+    border: 1px solid #000;
+    border-radius: 3px;
+
+
+}
+
+.procuct-titles {
+    background-color: rgb(192, 182, 182);
+}
+
+.footer > ul {
+    display: flex;
+    flex-direction: row;
 }
