--- a/Responsive Web Design Projects/#4-Technical Documentation Page/style.css
+++ b/Responsive Web Design Projects/#4-Technical Documentation Page/style.css
@@ -1,3 +1,103 @@
-h1 {
-    size: 20px;
+body {
+    min-width: 300px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    line-height: 1.5;
 }
+
+
+
+#navbar {
+    position:fixed;
+    min-width: 290px;
+    width: fit-content;
+    height: 100%;
+    border-color: rgba(0, 22, 22, 0.4);
+    overflow-y: scroll;
+    top: 0px;
+    left: 0px;
+}
+
+#navbar > ul > li {
+    font-size: 20px;
+    list-style: none;
+    position: relative;
+    margin: 0px;
+    line-height: 2.0;
+    border-top: 1px solid;
+    width: 100%;
+}
+
+#navbar > ul {
+    padding: 0px;
+}
+
+#navbar > ul > li > a {
+    display: block;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+#main-doc {
+    position: absolute;
+    margin-left: 400px;
+}
+
+code {
+    display: block;
+    position: relative;
+    align-self: center;
+    width: fit-content;
+    max-width: 400px;
+    height: auto;
+    padding: 3px;
+    background-color: rgb(204, 199, 199);
+    padding: 10px;
+    border-radius: 15px;
+}
+
+@media (max-width: 750px) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+    #navbar ul {
+        border: 1px solid;
+        height: 207px;
+    }
+    #navbar {
+        position: absolute;
+        top: 0;
+        right: 0px;
+        padding: 0;
+        margin: 0;
+        width: 100vw;
+        max-height: 275px;
+        border: none;
+        z-index: 1;
+        border-bottom: 2px solid;
+    }
+    #main-doc {
+        position: relative;
+        text-align: center;
+        margin: 300px auto auto -50px;
+    }
+    code {
+        margin-left: 100px;
+    }
+}
+
+header {
+    font-size: 30px;
+    text-align: center;
+}
+
+#header-title {
+    margin: 25px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+
