--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
@@ -1,14 +1,54 @@
+* {
+    text-align: center;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 #navbar {
-    position: fixed;
+    position:fixed;
+    display: flex;
+    background-color: rgb(223, 186, 94);
+    width: 100%;
+    height: 70px;
+    top: 0px;
+    left: 0px;
     justify-content: flex-end;
-    background-color: aqua;
+    align-items: center;
+
+    /*
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 70px;
+    background-color: brown;
+    */
+}
+
+#navlist {
+    display: flex;
+    align-items: space-evenly;
+    text-decoration: none;
+    margin-right: 100px;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
 }
 
 ul {
-    display: flex;
-}
+    list-style: none;
+  }
 
 #welcome-section {
     position: relative;
-    margin: 30px, auto
+    margin-top: 80px;
+    text-align: center;
 }
