--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
@@ -3,22 +3,20 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.5rem; /* 18px */
+    font-family: 'sans-serif';
+    font-size: 1.5rem;
     font-weight: 200;
     line-height: 1.3;
     color: white;
       
 }
 
-
-
 #navbar {
     position:fixed;
     display: flex;
     justify-content: flex-end;
-    background-image: linear-gradient(35deg, rgb(176, 227, 243), blue);
-    width: 100%;
+    background-color: darkred;
+    width: 100vw;
     height: 90px;
     top: 0px;
     left: 0px;
@@ -46,32 +44,67 @@ ul {
 
 /* Welcome section */
 
-#info {
+#welcome-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
-    position: relative;
-    margin: 0px 0px;
-    background-image: linear-gradient(45deg, darkblue, rgb(5, 7, 32));
+    background-image: linear-gradient(35deg, rgb(176, 227, 243), darkblue);
 }
 
 /* Section projects */
 
 #projects {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: auto;
+    height: fit-content;
     text-align: center;
+    background-color: darkblue;
 }
 
 #projects-header {
-    margin: 0;
-    background-color: black;
+    max-width: 640px;
+    width: 100vw;
+    margin: 0 auto 6rem auto;
 }
 
 .container {
     display: grid;
-    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 3rem;
+    width: 100vw;
     height: 100vh;
-    background-color: cadetblue;
+    max-width: 1280px;
+    margin: 0px auto;
+    }
+
+.project-file {
+    width: 320px;
+    height: 350px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
+    background-color: rgb(134, 129, 158);
+    text-decoration: none;
+    color: white;
+}
+
+.project-image {
+    object-fit: cover;
+	height: 90%;
+	max-width: 100%;
+}
+
+.project-title {
+    margin: 0px;
+}
+
+footer {
+    width: 100vw;
+    background-color: darkkhaki;
+    margin: 0px;
+    padding: 0px;
 }
