--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
@@ -1,6 +1,30 @@
 * {
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
+
+html {
+    font-size: 62,5%;
+}
+
+@media (max-width: 75em) {
+    html {
+      font-size: 60%;
+    }
+  }
+  
+  @media (max-width: 61.25em) {
+    html {
+      font-size: 58%;
+    }
+  }
+  
+  @media (max-width: 28.75em) {
+    html {
+      font-size: 55%;
+    }
+  }
 
 body {
     font-family: 'sans-serif';
@@ -11,11 +35,28 @@ body {
       
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+
+ul {
+    list-style: none;
+}
+
+img {
+    display: block;
+    width: 100%;
+}
+
+/* Nav section */
+
 #navbar {
     position:fixed;
     display: flex;
     justify-content: flex-end;
-    background-color: darkred;
+    background-color: rgb(122, 7, 7);
     width: 100vw;
     height: 90px;
     top: 0px;
@@ -29,18 +70,22 @@ body {
     margin-right: 2rem;
 }
 
+@media (max-width: 28.75em) {
+    #navbar {
+      justify-content: center;
+    }
+  
+    #navlist {
+      margin: 0 1rem;
+    }
+  }
+
 .links {
 
     font-size: 2rem;
     padding: 2rem;
-    text-decoration: none;
-    color: white;
 }
 
-
-ul {
-    list-style: none;
-}
 
 /* Welcome section */
 
@@ -53,38 +98,51 @@ ul {
     height: 100vh;
     background-image: linear-gradient(35deg, rgb(176, 227, 243), darkblue);
 }
+#welcome-section > div > p {
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: black;
+  }
 
 /* Section projects */
 
 #projects {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: auto;
-    height: fit-content;
     text-align: center;
+    padding: 10rem 2rem;
     background-color: darkblue;
 }
 
-#projects-header {
+.projects-header {
     max-width: 640px;
-    width: 100vw;
     margin: 0 auto 6rem auto;
+    border-bottom: 0.2rem solid 
 }
+
+@media (max-width: 28.75em) {
+    .projects-header {
+      font-size: 4rem;
+    }
+  }
 
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 3rem;
-    width: 100vw;
-    height: 100vh;
     max-width: 1280px;
+    width: 100%;
     margin: 0px auto;
+    margin-bottom: 6rem;
+}
+
+@media (max-width: 30.625em) {
+    .container {
+      grid-template-columns: 1fr;
     }
 
+  }
+
 .project-file {
-    width: 320px;
-    height: 350px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 3px;
     background-color: rgb(134, 129, 158);
@@ -94,7 +152,7 @@ ul {
 
 .project-image {
     object-fit: cover;
-	height: 90%;
+	height: calc(100% - 30px);
 	max-width: 100%;
 }
 
@@ -104,7 +162,7 @@ ul {
 
 footer {
     width: 100vw;
-    background-color: darkkhaki;
+    background-color: darkblue;
     margin: 0px;
     padding: 0px;
 }
