--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/style.css
@@ -142,7 +142,7 @@ img {
 
   }
 
-.project-file {
+.project-tile {
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     border-radius: 3px;
     background-color: rgb(134, 129, 158);
